<package>
  <name>device_driver_base</name>
  <version>0.0.0</version>
  <description>A package with useful objects and classes for creating device drivers</description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>river_ros_util</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>river_ros_util</run_depend>
  <run_depend>message_runtime</run_depend>

 <export>
 </export>

</package>


