<?xml version="1.0"?>
<package>
  <name>robot_drive_controllers</name>
  <version>0.0.0</version>
  <description>The robot_drive_controllers package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>


  <license>TODO</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>river_ros_util</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>river_ros_util</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/drive_controllers_plugins.xml"/>
  </export>
</package>