<?xml version="1.0"?>
<package>
  <name>robot_drive_controllers</name>
  <version>0.0.0</version>
  <description>The robot_drive_controllers package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>


  <license>BSD</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>river_ros_util</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>river_ros_util</run_depend>
  <run_depend>nav_msgs</run_depend>


  <export>
  </export>
</package>