<?xml version="1.0"?>
<package>
  <name>robot_teleop</name>
  <version>0.0.0</version>
  <description>A collection of tools to teleop robots developed by the WPI RIVeR Lab</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
  </export>
</package>